fix logo spacing

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,7 +1,7 @@
 .icon {
     &__logo {
         fill: #000;
-        @include scale-icons(60px, 30px);
+        @include scale-icons(60px, 40px);
     }
 
     &__menu {
